<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@android:color/white"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <include layout="@layout/microblog"/>

    <include layout="@layout/divider"/>

    <Switch
        android:id="@+id/switch_status"
        android:text="@string/solve_status"
        android:textOn="@string/solved"
        android:textOff="@string/to_be_solved"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
