<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/partial_toolbar_with_back"/>


    <ImageView
        android:src="@mipmap/ic_logo"
        android:layout_height="96dp"
        android:layout_width="96dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        android:text="@string/app_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/version_name"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.leon.lib.settingview.LSettingItem
                android:id="@+id/introduction"
                android:layout_marginTop="24dp"
                app:leftText="@string/introduction"
                app:leftIcon="@drawable/ic_edit_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <com.leon.lib.settingview.LSettingItem
                android:id="@+id/check_update"
                app:leftIcon="@drawable/ic_update_black_24dp"
                app:leftText="@string/check_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.leon.lib.settingview.LSettingItem
                android:id="@+id/feedback"
                app:leftIcon="@drawable/ic_feedback_black_24dp"
                app:leftText="@string/feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.leon.lib.settingview.LSettingItem
                android:id="@+id/help"
                app:leftIcon="@drawable/ic_live_help_black_24dp"
                app:leftText="@string/help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
