<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/partial_toolbar_with_back"/>


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        android:paddingLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/contact_us"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="16sp"
            android:text="@string/xiaogangla_qq_com"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="16sp"
            android:text="@string/developer"/>
    </LinearLayout>
</LinearLayout>
