<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/partial_toolbar_with_back"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/avatar_container"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:text="@string/avatar"/>

                <ImageView
                    android:id="@+id/avatar_image"
                    android:padding="8dp"
                    android:layout_width="@dimen/toolbar_height"
                    android:layout_height="@dimen/toolbar_height"/>
            </LinearLayout>

            <include layout="@layout/divider"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/nickname_container"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:text="@string/nickname"/>

                <TextView
                    android:id="@+id/nickname"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <include layout="@layout/divider"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/username_container"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:text="@string/username"/>

                <TextView
                    android:id="@+id/username"
                    android:layout_marginRight="8dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <include layout="@layout/divider"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/gender_container"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:text="@string/gender"/>

                <TextView
                    android:id="@+id/gender"
                    android:layout_marginRight="8dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <include layout="@layout/divider"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/school_container"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:text="@string/school"/>

                <TextView
                    android:id="@+id/school"
                    android:layout_marginRight="8dp"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <include layout="@layout/divider"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/tel_container"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:text="@string/tel"/>

                <TextView
                    android:id="@+id/tel"
                    android:layout_marginRight="8dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <include layout="@layout/divider"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
